# kubeflow-notebook-ci

./: Cargo.toml  Dockerfile  build.sh  docker-compose.yaml  entrypoint.sh  install-kubectl-in-cluster.sh  notebooks.json  output.json  output2.json  repos.json
containers/api-auth/: Dockerfile  docker-compose.yml
containers/notebook-ci-db/: docker-compose.yml
frontend/: .env  .env.development  .env.production  package.json  pnpm-lock.yaml  vue.config.js
frontend/containers/kubeflow-auth-api-frontend/: docker-compose.yaml
frontend/public/: index.html  notebooks.json
frontend/src/: App.vue  main.js
frontend/src/components/: Notebook.vue  ToggleSwitch.vue
frontend/src/components/body/: BuildOutputBody.vue  ConfigBody.vue  OutputBody.vue  PushOutputBody.vue  TrackOutputBody.vue
frontend/src/components/modals/: FailureModal.vue  LoadingModal.vue  Modal.vue  SuccessModal.vue
frontend/src/scss/: _variables.scss
manifests/: admin-rbac.yaml  deployment.yaml  istio.yaml
monitor/: .env  Cargo.toml  a.txt  checkout.sh  main.rs  tracking.sh
monitor/src/: build.rs  dto.rs  main.rs  utils.rs
monitor/test-build/: Dockerfile  build.sh
monitor/tracking/1/: now
server/: .env  Cargo.toml  askama.toml  sqlx-data.json
server/migrations/: 20211208230226_setup_db.down.sql  20211208230226_setup_db.up.sql
server/src/: config.rs  main.rs  utils.rs
server/src/models/: dto.rs
server/src/services/: clean.rs  mod.rs
server/src/services/notebook/: factory.rs  mod.rs
server/src/services/repo/: factory.rs  mod.rs  update_backup.rs
src/: config.rs  main.rs
src/models/: api_token.rs
