[package]
name = "kubeflow-notebook-ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.13"
anyhow = "1.0.51"
derive_builder = "0.10.2"
dotenv = "0.15.0"
sqlx = { version = "0.5.9", features = [ "postgres", "runtime-tokio-rustls" ] }
kube = { version = "0.64", features = ["runtime","derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_21"] }
serde = "1.0.130"
config = "0.11.0"
actix-files = "0.6.0-beta.9"

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
