[package]
name = "kubeflow-notebook-ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
dotenv = "0.15.0"
serde = "1.0.130"
cmd_lib = "1.3.0"
serde_json = "1.0.72"
uuid = { version = "0.8.2", features = ["v4"] }

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
