[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
cmd_lib = "1.3.0"
serde_json = "1.0.72"
uuid = { version = "0.8.2", features = ["v4"] }
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
retry = "1.3.0"
fancy-regex = "0.7.1"
lazy_static = "1.4.0"
chrono = "0.4.19"
signal-hook = "0.3.13"

[features]
