[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.13"
actix-files = "0.6.0-beta.9"
sqlx = { version = "0.5.9", features = [ "postgres", "runtime-tokio-rustls", "offline" ] }
config = "0.11.0"
anyhow = "1.0.51"
dotenv = "0.15.0"
serde = "1.0.131"
cmd_lib = "1.3.0"
askama = "0.11.0"
serde_json = "1.0.73"
actix-cors = "0.6.0-beta.7"
fancy-regex = "0.7.1"


[features]

[package.metadata.x]
dev='cargo watch -x "run --bin $(basename $(pwd))"'
